welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: type color
  var couleurdelacase: color= 
                       ^SlugTracking:18: error: type mismatch;
 found   : Unit
 required: Boolean
} 
^