welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  
  var couleurdelacase: color= 
  
  if ( estFaceMur == false ){
      avance();
      couleurdelacase = getCouleurSol()
      couleurdelacase match{
        case Color.green => return true
        case Color.white => return false
        case Color.gray => return false
        case _ =>
      }
		
  }

}